--- a/logs-bugs-reporter/log-bugs-dto/pom.xml
+++ b/logs-bugs-reporter/log-bugs-dto/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
 
-    <groupId>tellran.logs.bugs</groupId>
+    <groupId>telran.logs.bugs</groupId>
     <artifactId>logs-bugs-reporter</artifactId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
