--- a/logs-bugs-reporter/pom.xml
+++ b/logs-bugs-reporter/pom.xml
@@ -8,7 +8,7 @@
 		<version>2.4.2</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>tellran.logs.bugs</groupId>
+	<groupId>telran.logs.bugs</groupId>
 	<artifactId>logs-bugs-reporter</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
