--- a/logs-bugs-reporter/logs-analyzer/src/main/resources/application.properties
+++ b/logs-bugs-reporter/logs-analyzer/src/main/resources/application.properties
@@ -1,1 +1,2 @@
-app-binding-name=exceptions-out-0
+binding.names=exceptions-out-100,exceptions-out-1,exceptions-out-0,exceptions-out-0,exceptions-out-0,exceptions-out-0,exceptions-out-0
+logging.level.telran=debug
