--- a/logs-bugs-reporter/logs-bugs-openning/src/main/resources/application.properties
+++ b/logs-bugs-reporter/logs-bugs-openning/src/main/resources/application.properties
@@ -10,3 +10,4 @@ spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults= false
 spring.datasource.initialization-mode=always
 #############################################################
 logging.level.telran=debug
+spring.cloud.stream.bindings.process-in-0.destination: exceptions-out-0
