--- a/logs-bugs-reporter/logs-analyzer/src/main/resources/application.properties
+++ b/logs-bugs-reporter/logs-analyzer/src/main/resources/application.properties
@@ -1,2 +1,3 @@
+app-logs-provider-artifact:logs-provider
 binding.names=exceptions-out-100,exceptions-out-1,exceptions-out-0,exceptions-out-0,exceptions-out-0,exceptions-out-0,exceptions-out-0
 logging.level.telran=debug
