--- a/logs-bugs-reporter/logs-provider/src/main/resources/application.properties
+++ b/logs-bugs-reporter/logs-provider/src/main/resources/application.properties
@@ -1,6 +1,2 @@
-sec-exception-prob:30
-exception-prob:10
-authentication-prob:70
-authentication-artifact:authentication
-authorization-artifact:authorization
-class-artifact:class
+
+logging.level.telran=debug
