--- a/logs-bugs-reporter/logs-provider/pom.xml
+++ b/logs-bugs-reporter/logs-provider/pom.xml
@@ -14,6 +14,11 @@
 			<artifactId>log-bugs-dto</artifactId>
 			<version>0.0.1</version>
 		</dependency>
+				<dependency>
+			<groupId>telran.logs.bugs</groupId>
+			<artifactId>logs-bugs-random</artifactId>
+			<version>0.0.1</version>
+		</dependency>
 	
 
 		<dependency>
@@ -28,10 +33,7 @@
 			<classifier>test-binder</classifier>
 			<type>test-jar</type>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-stream-binder-kafka</artifactId>
-		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter</artifactId>
