--- a/logs-bugs-reporter/pom.xml
+++ b/logs-bugs-reporter/pom.xml
@@ -55,5 +55,8 @@
     <module>logs-bugs-email-provider</module>
     <module>logs-bugs-email-notifier</module>
     <module>logs-bugs-assigner-mail-provider</module>
+    <module>logs-info-back-office</module>
+    <module>logs-bugs-random</module>
+    <module>logs-bugs-reporter-back-office</module>
 	</modules>
 </project>
