--- a/logs-bugs-reporter/logs-bugs-exceptions-handler/pom.xml
+++ b/logs-bugs-reporter/logs-bugs-exceptions-handler/pom.xml
@@ -5,31 +5,21 @@
     <artifactId>logs-bugs-reporter</artifactId>
     <version>0.0.1</version>
   </parent>
-  <artifactId>logs-bugs-reporter-back-office</artifactId>
+  <artifactId>logs-bugs-exceptions-handler</artifactId>
   <dependencies>
   <dependency>
-  <groupId>telran.logs.bugs</groupId>
-  <artifactId>logs-bugs-jpa-entities</artifactId>
-  <version>0.0.1</version>
-  </dependency>
-    <dependency>
-  <groupId>telran.logs.bugs</groupId>
-  <artifactId>logs-bugs-exceptions-handler</artifactId>
-  <version>0.0.1</version>
-  </dependency>
-  <dependency>
-  <groupId>com.h2database</groupId>
-  <artifactId>h2</artifactId>
-  <scope>test</scope>
-  </dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter</artifactId>
+			<groupId>telran.logs.bugs</groupId>
+			<artifactId>log-bugs-dto</artifactId>
+			<version>0.0.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
