--- a/logs-bugs-reporter/pom.xml
+++ b/logs-bugs-reporter/pom.xml
@@ -58,5 +58,6 @@
     <module>logs-info-back-office</module>
     <module>logs-bugs-random</module>
     <module>logs-bugs-reporter-back-office</module>
+    <module>logs-bugs-exceptions-handler</module>
 	</modules>
 </project>
