--- a/logs-bugs-reporter/logs-bugs-opening/pom.xml
+++ b/logs-bugs-reporter/logs-bugs-opening/pom.xml
@@ -5,8 +5,8 @@
     <artifactId>logs-bugs-reporter</artifactId>
     <version>0.0.1</version>
   </parent>
-  <artifactId>logs-bugs-openning</artifactId>
-	<properties>
+  <artifactId>logs-bugs-opening</artifactId>
+  <properties>
 		<java.version>11</java.version>
 		<spring-cloud.version>2020.0.0</spring-cloud.version>
 	</properties>
