--- a/logs-bugs-reporter/logs-bugs-opening/src/main/resources/application.properties
+++ b/logs-bugs-reporter/logs-bugs-opening/src/main/resources/application.properties
@@ -10,4 +10,14 @@ spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults= false
 spring.datasource.initialization-mode=always
 #############################################################
 logging.level.telran=debug
-spring.cloud.stream.bindings.process-in-0.destination: exceptions-out-0
+#spring.cloud.stream.bindings.process-in-0.destination: exceptions-out-0
+server.port=0
+spring.kafka.bootstrap-servers=rocket-01.srvs.cloudkafka.com:9094,rocket-02.srvs.cloudkafka.com:9094,rocket-03.srvs.cloudkafka.com:9094
+spring.kafka.properties.security.protocol=SASL_SSL
+spring.kafka.properties.sasl.mechanism=SCRAM-SHA-256
+spring.kafka.properties.sasl.jaas.config=org.apache.kafka.common.security.scram.ScramLoginModule required username="53t5s4km" password="j_XIp5Ba4ZrgzDrVh42hqZnGz8vb3ZaR";
+
+
+spring.kafka.consumer.auto-offset-reset=earliest
+spring.cloud.stream.bindings.getAnalyzerBean-in-0.destination=53t5s4km-exceptions
+spring.cloud.stream.bindings.getAnalyzerBean-in-0.group=53t5s4km-logs-bugs-opening
