--- a/logs-bugs-reporter/logs-bugs-opening/src/main/resources/application.properties
+++ b/logs-bugs-reporter/logs-bugs-opening/src/main/resources/application.properties
@@ -19,5 +19,5 @@ spring.kafka.properties.sasl.jaas.config=org.apache.kafka.common.security.scram.
 
 
 spring.kafka.consumer.auto-offset-reset=earliest
-spring.cloud.stream.bindings.getAnalyzerBean-in-0.destination=53t5s4km-exceptions
-spring.cloud.stream.bindings.getAnalyzerBean-in-0.group=53t5s4km-logs-bugs-opening
+spring.cloud.stream.bindings.getLogDtoConsumer-in-0.destination=53t5s4km-exceptions
+spring.cloud.stream.bindings.getLogDtoConsumer-in-0.group=53t5s4km-logs-bugs-opening
