--- a/logs-bugs-reporter/logs-provider/src/main/resources/application.properties
+++ b/logs-bugs-reporter/logs-provider/src/main/resources/application.properties
@@ -9,3 +9,4 @@ spring.kafka.properties.sasl.jaas.config=org.apache.kafka.common.security.scram.
 
 spring.kafka.consumer.auto-offset-reset=earliest
 spring.cloud.stream.bindings.random_logs_provider-out-0.destination=53t5s4km-default
+spring.cloud.stream.poller.fixedDelay:100
