HW-69+common configs

--- a/logs-bugs-reporter/logs-db-populator/src/main/resources/application.properties
+++ b/logs-bugs-reporter/logs-db-populator/src/main/resources/application.properties
@@ -1,12 +1,9 @@
-logging.level.telran=debug
+#logs-db-populator
 app-binding-name=exceptions-out-0
 spring.data.mongodb.uri=mongodb+srv://root:Semtember1@cluster0.m8mb0.mongodb.net/logdocs?retryWrites=true&w=majority
 
+spring.config.import=classpath:kafra_logging.properties,classpath:mongo.properties
 server.port=0
-spring.kafka.bootstrap-servers=rocket-01.srvs.cloudkafka.com:9094,rocket-02.srvs.cloudkafka.com:9094,rocket-03.srvs.cloudkafka.com:9094
-spring.kafka.properties.security.protocol=SASL_SSL
-spring.kafka.properties.sasl.mechanism=SCRAM-SHA-256
-spring.kafka.properties.sasl.jaas.config=org.apache.kafka.common.security.scram.ScramLoginModule required username="53t5s4km" password="j_XIp5Ba4ZrgzDrVh42hqZnGz8vb3ZaR";
 
 
 spring.kafka.consumer.auto-offset-reset=earliest
