--- a/logs-bugs-reporter/logs-analyzer/src/main/resources/application.properties
+++ b/logs-bugs-reporter/logs-analyzer/src/main/resources/application.properties
@@ -1,13 +1,10 @@
 app-logs-provider-artifact:logs-provider
 app-binding-name-exceptions=exceptions-out-0
 app-binding-name-logs=logs-out-0
-logging.level.telran=debug
+
 
 server.port=0
-spring.kafka.bootstrap-servers=rocket-01.srvs.cloudkafka.com:9094,rocket-02.srvs.cloudkafka.com:9094,rocket-03.srvs.cloudkafka.com:9094
-spring.kafka.properties.security.protocol=SASL_SSL
-spring.kafka.properties.sasl.mechanism=SCRAM-SHA-256
-spring.kafka.properties.sasl.jaas.config=org.apache.kafka.common.security.scram.ScramLoginModule required username="53t5s4km" password="j_XIp5Ba4ZrgzDrVh42hqZnGz8vb3ZaR";
+spring.config.import=classpath:kafra_logging.properties
 
 
 spring.kafka.consumer.auto-offset-reset=earliest
