--- a/logs-bugs-reporter/logs-bugs-opening/src/main/resources/application.properties
+++ b/logs-bugs-reporter/logs-bugs-opening/src/main/resources/application.properties
@@ -1,21 +1,7 @@
-#################################################
-#Configurationworking with JPA Postresql
-spring.datasource.url=jdbc:postgresql://localhost:5432/bugs
-spring.datasource.username=postgres
-spring.datasource.password=Semtember1
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults= false
-spring.datasource.initialization-mode=always
-#############################################################
-logging.level.telran=debug
-#spring.cloud.stream.bindings.process-in-0.destination: exceptions-out-0
+#logs-bugs-opening
+
 server.port=0
-spring.kafka.bootstrap-servers=rocket-01.srvs.cloudkafka.com:9094,rocket-02.srvs.cloudkafka.com:9094,rocket-03.srvs.cloudkafka.com:9094
-spring.kafka.properties.security.protocol=SASL_SSL
-spring.kafka.properties.sasl.mechanism=SCRAM-SHA-256
-spring.kafka.properties.sasl.jaas.config=org.apache.kafka.common.security.scram.ScramLoginModule required username="53t5s4km" password="j_XIp5Ba4ZrgzDrVh42hqZnGz8vb3ZaR";
+spring.config.import=classpath:kafra_logging.properties,classpath:postgres.properties
 
 
 spring.kafka.consumer.auto-offset-reset=earliest
