--- a/logs-bugs-reporter/logs-info-back-office/src/main/resources/application.properties
+++ b/logs-bugs-reporter/logs-info-back-office/src/main/resources/application.properties
@@ -1,5 +1,6 @@
+#logs-info-back-office
 server.port=8585
-spring.data.mongodb.uri=mongodb+srv://root:Semtember1@cluster0.m8mb0.mongodb.net/logdocs?retryWrites=true&w=majority
+spring.config.import=classpath:mongo.properties
 app-population-enable=false
 app-number-logs=1000
 logging.level.telran=debug
