--- a/logs-bugs-reporter/logs-provider/src/main/resources/application.properties
+++ b/logs-bugs-reporter/logs-provider/src/main/resources/application.properties
@@ -1,12 +1,7 @@
-logging.level.telran=debug
+#logs-provider
+spring.config.import=classpath:kafra_logging.properties
 
 server.port=0
-spring.kafka.bootstrap-servers=rocket-01.srvs.cloudkafka.com:9094,rocket-02.srvs.cloudkafka.com:9094,rocket-03.srvs.cloudkafka.com:9094
-spring.kafka.properties.security.protocol=SASL_SSL
-spring.kafka.properties.sasl.mechanism=SCRAM-SHA-256
-spring.kafka.properties.sasl.jaas.config=org.apache.kafka.common.security.scram.ScramLoginModule required username="53t5s4km" password="j_XIp5Ba4ZrgzDrVh42hqZnGz8vb3ZaR";
-
-
 spring.kafka.consumer.auto-offset-reset=earliest
 spring.cloud.stream.bindings.random_logs_provider-out-0.destination=53t5s4km-default
 spring.cloud.stream.poller.fixedDelay:100
