--- a/logs-bugs-reporter/logs-bugs-assigner-mail-provider/src/main/resources/application.properties
+++ b/logs-bugs-reporter/logs-bugs-assigner-mail-provider/src/main/resources/application.properties
@@ -1,2 +1,5 @@
-teamleader.email=boss@gmail.com
+#logs-bugs-assigner-mail-provider
+assigner.email=llevi9973+assigner@gmail.com
 logging.level.telran=debug
+
+server.port=8282
