--- a/logs-bugs-reporter/logs-bugs-email-notifier/src/main/resources/application.properties
+++ b/logs-bugs-reporter/logs-bugs-email-notifier/src/main/resources/application.properties
@@ -1,5 +1,22 @@
+#logs-bugs-email-notifier
 message.to.programmer.subject:exception
-messageToTeamleaderSubject:exception
+message.to.assigner.subject:exception
 message.to.programmer.addressee:Programmer
-message.to.teamleader.addressee:Opened Bugs Assigner
+message.to.assigner.addressee:Opened Bugs Assigner
 no.found.email.log:email "to" has received neither from logs-bugs-email-provider nor from logs-bugs-assigner-mail-provider
+app-url-assigner-mail=http://localhost:8282
+server.port=0
+spring.config.import=classpath:kafra_logging.properties,classpath:postgres.properties
+
+
+spring.kafka.consumer.auto-offset-reset=earliest
+spring.cloud.stream.bindings.getExceptionsConsumer-in-0.destination=53t5s4km-exceptions
+spring.cloud.stream.bindings.getExceptionsConsumer-in-0.group=53t5s4km-email-notifier
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=llevi9973@gmail.com
+spring.mail.password=${MAIL_PASSWORD}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.smtp.debug=true
