--- a/logs-bugs-reporter/logs-bugs-email-notifier/pom.xml
+++ b/logs-bugs-reporter/logs-bugs-email-notifier/pom.xml
@@ -12,6 +12,11 @@
 			<artifactId>log-bugs-dto</artifactId>
 			<version>0.0.1</version>
 		</dependency>
+				<dependency>
+		<groupId>telran.logs.bugs</groupId>
+		<artifactId>logs-bugs-jpa-entities</artifactId>
+		<version>0.0.1</version>
+		</dependency>
   <dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-stream</artifactId>
@@ -41,6 +46,20 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<optional>true</optional>
 		</dependency>
   </dependencies>
 	<properties>
