--- a/logs-bugs-reporter/logs-db-populator/src/main/resources/application.properties
+++ b/logs-bugs-reporter/logs-db-populator/src/main/resources/application.properties
@@ -1,8 +1,7 @@
 #logs-db-populator
 app-binding-name=exceptions-out-0
-spring.data.mongodb.uri=mongodb+srv://root:Semtember1@cluster0.m8mb0.mongodb.net/logdocs?retryWrites=true&w=majority
-
-spring.config.import=classpath:kafra_logging.properties,classpath:mongo.properties
+spring.data.mongodb.uri=mongodb+srv://root:${MONGO_PASSWORD}@cluster0.m8mb0.mongodb.net/logdocs?retryWrites=true&w=majority
+spring.config.import=classpath:kafra_logging.properties
 server.port=0
 
 
