--- a/logs-bugs-reporter/logs-bugs-email-notifier/src/main/resources/application.properties
+++ b/logs-bugs-reporter/logs-bugs-email-notifier/src/main/resources/application.properties
@@ -5,6 +5,7 @@ message.to.programmer.addressee:Programmer
 message.to.assigner.addressee:Opened Bugs Assigner
 no.found.email.log:email "to" has received neither from logs-bugs-email-provider nor from logs-bugs-assigner-mail-provider
 app-url-assigner-mail=http://localhost:8282
+app-url-programmer-mail=http://localhost:8383
 server.port=0
 spring.config.import=classpath:kafra_logging.properties,classpath:postgres.properties
 
