--- a/logs-bugs-email-provider/src/main/resources/application.properties
+++ b/logs-bugs-email-provider/src/main/resources/application.properties
@@ -2,6 +2,18 @@
 logging.level.telran=debug
 
 server.port=8383
-spring.config.import=classpath:postgres.properties
+#spring.config.import=classpath:postgres.properties
 
+#################################################
+#Configurationworking with JPA Postresql
+spring.datasource.url=jdbc:postgresql://ec2-54-155-87-214.eu-west-1.compute.amazonaws.com:5432/denavr0l48oa2l
+spring.datasource.username=llhzecpfahfsdn
+spring.datasource.password=${POSTGRES_PASSWORD}
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults= false
+spring.datasource.initialization-mode=always
+##############################################################
+spring.datasource.hikari.maximum-pool-size=3
 
