--- a/logs-bugs-reporter-back-office/src/main/resources/application.properties
+++ b/logs-bugs-reporter-back-office/src/main/resources/application.properties
@@ -1,14 +1,20 @@
 #################################################
 #Configurationworking with JPA Postresql
-#spring.datasource.url=jdbc:postgresql://localhost:5432/bugs
-#spring.datasource.username=postgres
-#spring.datasource.password=Semtember1
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
-#spring.datasource.driver-class-name=org.postgresql.Driver
-#spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults= false
-#spring.datasource.initialization-mode=always
-#############################################################
+spring.datasource.url=jdbc:postgresql://ec2-54-155-87-214.eu-west-1.compute.amazonaws.com:5432/denavr0l48oa2l
+spring.datasource.username=llhzecpfahfsdn
+spring.datasource.password=${POSTGRES_PASSWORD}
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults= false
+spring.datasource.initialization-mode=always
+##############################################################
 logging.level.telran=debug
-spring.config.import=classpath:postgres.properties
+spring.datasource.hikari.maximum-pool-size=3
+#spring.config.import=classpath:postgres.properties
 server.port=9090
+
+spring.jmx.enabled = true
+management.endpoints.web.exposure.include=*
+management.endpoint.shutdown.enabled=true
+management.endpoint.health.show-details=always
