--- a/logs-db-populator/src/main/resources/application.properties
+++ b/logs-db-populator/src/main/resources/application.properties
@@ -2,6 +2,8 @@
 app-binding-name=exceptions-out-0
 spring.data.mongodb.uri=mongodb+srv://root:${MONGO_PASSWORD}@cluster0.m8mb0.mongodb.net/logdocs?retryWrites=true&w=majority
 spring.config.import=classpath:kafra_logging.properties
+spring.kafka.properties.sasl.jaas.config=org.apache.kafka.common.security.scram.ScramLoginModule required username="53t5s4km" password=${KAFKA_PASSWORD};
+
 server.port=0
 
 
