--- a/logs-analyzer/src/main/resources/application.properties
+++ b/logs-analyzer/src/main/resources/application.properties
@@ -5,7 +5,7 @@ app-binding-name-logs=logs-out-0
 
 server.port=0
 spring.config.import=classpath:kafra_logging.properties
-
+spring.kafka.properties.sasl.jaas.config=org.apache.kafka.common.security.scram.ScramLoginModule required username="53t5s4km" password=${KAFKA_PASSWORD};
 
 spring.kafka.consumer.auto-offset-reset=earliest
 spring.cloud.stream.bindings.getAnalyzerBean-in-0.destination=53t5s4km-default
