--- a/logs-bugs-email-notifier/src/main/resources/application.properties
+++ b/logs-bugs-email-notifier/src/main/resources/application.properties
@@ -4,10 +4,11 @@ message.to.assigner.subject:exception
 message.to.programmer.addressee:Programmer
 message.to.assigner.addressee:Opened Bugs Assigner
 no.found.email.log:email "to" has received neither from logs-bugs-email-provider nor from logs-bugs-assigner-mail-provider
-app-url-assigner-mail=http://localhost:8282
-app-url-programmer-mail=http://localhost:8383
+app-url-assigner-mail=http://assigner-email-provider:8282
+app-url-programmer-mail=http://programmer-email-provider:8383
 server.port=0
-spring.config.import=classpath:kafra_logging.properties,classpath:postgres.properties
+spring.config.import=classpath:kafra_logging.properties
+spring.kafka.properties.sasl.jaas.config=org.apache.kafka.common.security.scram.ScramLoginModule required username="53t5s4km" password=${KAFKA_PASSWORD};
 
 
 spring.kafka.consumer.auto-offset-reset=earliest
