--- a/logs-bugs-opening/src/main/resources/application.properties
+++ b/logs-bugs-opening/src/main/resources/application.properties
@@ -1,8 +1,22 @@
 #logs-bugs-opening
 
 server.port=0
-spring.config.import=classpath:kafra_logging.properties,classpath:postgres.properties
+spring.config.import=classpath:kafra_logging.properties
+spring.kafka.properties.sasl.jaas.config=org.apache.kafka.common.security.scram.ScramLoginModule required username="53t5s4km" password=${KAFKA_PASSWORD};
+#,classpath:postgres.properties
 
+#################################################
+#Configurationworking with JPA Postresql
+spring.datasource.url=jdbc:postgresql://ec2-54-155-87-214.eu-west-1.compute.amazonaws.com:5432/denavr0l48oa2l
+spring.datasource.username=llhzecpfahfsdn
+spring.datasource.password=${POSTGRES_PASSWORD}
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults= false
+spring.datasource.initialization-mode=always
+##############################################################
+spring.datasource.hikari.maximum-pool-size=3
 
 spring.kafka.consumer.auto-offset-reset=earliest
 spring.cloud.stream.bindings.getLogDtoConsumer-in-0.destination=53t5s4km-exceptions
