--- a/logs-bugs-assigner-mail-provider/src/main/resources/application.properties
+++ b/logs-bugs-assigner-mail-provider/src/main/resources/application.properties
@@ -2,4 +2,11 @@
 assigner.email=llevi9973+assigner@gmail.com
 logging.level.telran=debug
 
-server.port=8282
+server.port=0
+
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=false
+spring.application.name=assigner-email-provider
+eureka.client.serviceUrl.defaultZone=http://discovery-server:8761/eureka
+management.endpoints.web.exposure.include=*
+management.endpoint.shutdown.enabled=true
