--- a/logs-bugs-email-notifier/src/main/resources/application.properties
+++ b/logs-bugs-email-notifier/src/main/resources/application.properties
@@ -4,8 +4,8 @@ message.to.assigner.subject:exception
 message.to.programmer.addressee:Programmer
 message.to.assigner.addressee:Opened Bugs Assigner
 no.found.email.log:email "to" has received neither from logs-bugs-email-provider nor from logs-bugs-assigner-mail-provider
-app-url-assigner-mail=http://assigner-email-provider:8282
-app-url-programmer-mail=http://programmer-email-provider:8383
+assigner-email-provider-name=assigner-email-provider
+programmer-email-provider_name=programmer-email-provider
 server.port=0
 spring.config.import=classpath:kafra_logging.properties
 spring.kafka.properties.sasl.jaas.config=org.apache.kafka.common.security.scram.ScramLoginModule required username="53t5s4km" password=${KAFKA_PASSWORD};
@@ -22,3 +22,10 @@ spring.mail.password=${MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.smtp.debug=true
+
+eureka.client.register-with-eureka=false
+eureka.client.fetch-registry=true
+eureka.client.serviceUrl.defaultZone=http://discovery-server:8761/eureka
+management.endpoints.web.exposure.include=*
+management.endpoint.shutdown.enabled=true
+spring,cloud.loadbalancer.cache.ttl=10s
