--- a/logs-bugs-email-provider/src/main/resources/application.properties
+++ b/logs-bugs-email-provider/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #logs-bugs-email-provider
 logging.level.telran=debug
 
-server.port=8383
+server.port=0
 #spring.config.import=classpath:postgres.properties
 
 #################################################
@@ -17,3 +17,9 @@ spring.datasource.initialization-mode=always
 ##############################################################
 spring.datasource.hikari.maximum-pool-size=3
 
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=false
+eureka.client.serviceUrl.defaultZone=http://discovery-server:8761/eureka
+spring.application.name=programmer-email-provider
+management.endpoints.web.exposure.include=*
+management.endpoint.shutdown.enabled=true
