--- a/pom.xml
+++ b/pom.xml
@@ -54,5 +54,6 @@
 		<module>logs-bugs-reporter-back-office</module>
 		<module>logs-bugs-exceptions-handler</module>
 		<module>logs-bugs-opening</module>
+		<module>logs-bugs-discovery-server</module>
 	</modules>
 </project>
